Selecting sections now changes background color, and icon color

--- a/style.css
+++ b/style.css
@@ -61,21 +61,39 @@ section {
 .sec1 {
   display: none;
   transform: translateY(0) scale(1);
+  background-color: #243b55;
 }
 
 .sec2 {
   display: none;
   transform: translateY(0) scale(1);
+  background-color: rgb(41, 28, 123);
 }
 
 .sec3 {
   display: none;
   transform: translateY(0) scale(1);
+  background-color: rgb(189, 33, 103);
 }
 
 .sec4 {
   display: none;
   transform: translateY(0) scale(1);
+  background-color: rgb(47, 200, 85);
+}
+
+.active {
+  display: block;
+  animation: appear 1s ease-in-out;
+  transform: translateY(0) scaleY(1);
+}
+@keyframes appear {
+  0% {
+    transform: translateY(-100%) scaleY(0);
+  }
+  100% {
+    transform: translateY(0) scaleY(1);
+  }
 }
 
 /* Controls */
